tests/sksl/errors/ReservedNameUnion.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'union'
1 error
